[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.8.5"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
spl-associated-token-account = {version = "1.0", features = ["no-entrypoint"]}

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true